fix the overflow problem with the messageContainer and chatItem container

--- a/src/Components/Dashboard/Messenger/ChatList/ChatList.module.scss
+++ b/src/Components/Dashboard/Messenger/ChatList/ChatList.module.scss
@@ -11,6 +11,12 @@
   flex-direction: column;
   align-items: center;
   overflow-y: auto;
+  .chatItemContainer {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 80px;
+    overflow: auto;
+  }
 }
 .searchInput {
   display: flex;
