--- a/src/Components/Dashboard/Messenger/ChatScreen/ChatScreen.module.scss
+++ b/src/Components/Dashboard/Messenger/ChatScreen/ChatScreen.module.scss
@@ -4,19 +4,55 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow: hidden;
   height: 100%;
   width: 100%;
-  padding: 1rem 0 8rem 0;
+  padding: 1rem 0 100px 0;
 }
 .typingArea {
-  // bottom: 100px;
+  @extend %normalBoxShadow;
+  position: absolute;
+  bottom: 100px;
   width: 100%;
+  height: 80px;
   z-index: 5;
-  textarea {
-    resize: none;
-    width: 100%;
+  button {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    outline: none;
+    border-radius: 50%;
+    border: none;
+    background: $sendMessageButton;
+    color: white;
   }
+  textarea {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    outline: none;
+    resize: none;
+    height: 100%;
+    width: 100%;
+    background: lighten($chatListBackground, 2%);
+    border: none;
+    padding: 2rem 1.5rem;
+  }
+}
+
+.messageContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 2rem 0.5rem;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .message--user {
